# My-Rust-AutoGPT

auto_gippity/: Cargo.toml
auto_gippity/src/: main.rs
auto_gippity/src/apis/: call_request.rs
auto_gippity/src/helpers/: command_line.rs  command_lines.rs  commd_line.rs  general.rs  mod.rs
auto_gippity/src/models/agents/: agent_architect.rs  agent_backend.rs
auto_gippity/src/models/agents_basic/: mod.rs
auto_gippity/src/models/agents_manager/: managing_agent.rs
auto_gippity/src/models/general/: llm.rs
web_template/: Cargo.toml
web_template/src/: code_template.rs  main.rs
