[package]
name = "auto_gippity"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.10", features = ["json"] }  # orig 0.11.17
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
crossterm = "0.28.1" # orig 0.26.1
async-trait = "0.1.68"
webbrowser = "1.0.3"  # orig 0.8.9
strum = "0.26.3"  # orig 0.24.1
strum_macros = "0.26.4" # 0.24.3
ai_functions = "0.1.1"